--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        jdk: ['8', '11']
     steps:
       - name: Checkout the project
         uses: actions/checkout@v2
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '8'
+          java-version: ${{ matrix.jdk }}
       - name: Build the project
         run: cd connector && sbt package
       - name: Upload the build artifact
