--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -9,15 +9,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        jdk: ['11', '8']
     steps:
       - name: Checkout the project
         uses: actions/checkout@v2
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: ${{ matrix.jdk }}
       - name: Build the project
         run: cd connector && sbt package
       - name: Upload the build artifact
         uses: actions/upload-artifact@v3
         with:
-          name: build-jar-file
+          name: build-jar-file-${{ matrix.jdk }}
           path: /home/runner/work/spark-connector/spark-connector/connector/target/scala-2.12/spark-vertica-connector_2.12-*.jar
   run-spark-integration-tests-json:
     name: Run regression tests using JSON export
@@ -44,7 +51,7 @@ jobs:
       - name: Download the build artifact
         uses: actions/download-artifact@v2
         with:
-          name: build-jar-file
+          name: build-jar-file-${{ matrix.jdk }}
           path: ./functional-tests/lib/
       - name: Wait for Vertica to be available
         uses: nick-invision/retry@v2
@@ -82,7 +89,7 @@ jobs:
       - name: Download the build artifact
         uses: actions/download-artifact@v2
         with:
-          name: build-jar-file
+          name: build-jar-file-${{ matrix.jdk }}
           path: ./functional-tests/lib/
       - name: Wait for Vertica to be available
         uses: nick-invision/retry@v2
@@ -104,7 +111,7 @@ jobs:
       - name: Download the build artifact
         uses: actions/download-artifact@v2
         with:
-          name: build-jar-file
+          name: build-jar-file-${{ matrix.jdk }}
           path: ./functional-tests/lib/
       - name: Add config options to application.conf
         run: cd functional-tests && ./pipeline-s3-config.sh
@@ -137,7 +144,7 @@ jobs:
       - name: Download the build artifact
         uses: actions/download-artifact@v2
         with:
-          name: build-jar-file
+          name: build-jar-file-${{ matrix.jdk }}
           path: ./functional-tests/lib/
       - name: Add config options to application.conf
         run: cd functional-tests && ./pipeline-gcs-config.sh
