--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -106,9 +106,6 @@ jobs:
         run: cd docker && docker-compose down
   run-integration-tests-s3:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        jdk: ['11', '8']
     needs: build
     steps:
       - name: Checkout the project
@@ -116,7 +113,7 @@ jobs:
       - name: Download the build artifact
         uses: actions/download-artifact@v2
         with:
-          name: build-jar-file-${{ matrix.jdk }}
+          name: build-jar-file-11
           path: ./functional-tests/lib/
       - name: Add config options to application.conf
         run: cd functional-tests && ./pipeline-s3-config.sh
@@ -143,8 +140,6 @@ jobs:
   run-integration-tests-gcs:
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        jdk: ['11', '8']
     needs: build
     steps:
       - name: Checkout the project
@@ -152,7 +147,7 @@ jobs:
       - name: Download the build artifact
         uses: actions/download-artifact@v2
         with:
-          name: build-jar-file-${{ matrix.jdk }}
+          name: build-jar-file-11
           path: ./functional-tests/lib/
       - name: Add config options to application.conf
         run: cd functional-tests && ./pipeline-gcs-config.sh
@@ -179,22 +174,3 @@ jobs:
         run: docker exec -w /spark-connector/functional-tests docker_client_1 sbt run
       - name: Remove docker containers
         run: cd docker && docker-compose down
-  slack-workflow-status:
-    name: Post Workflow Status To Slack
-    runs-on: ubuntu-latest
-    needs: [build,
-            run-spark-integration-tests-json,
-            run-spark-integration-tests-vertica-10,
-            run-integration-tests-gcs,
-            run-integration-tests-s3,]
-    if: failure()
-    steps:
-      - name: Slack Workflow Notification
-        uses: Gamesight/slack-workflow-status@master
-        if: always()
-        with:
-          repo_token: ${{secrets.GITHUB_TOKEN}}
-          slack_webhook_url: ${{secrets.SLACK_CHANNEL_WEBHOOK}}
-          name: 'Weekly tests failed'
-          icon_emoji: ':sadge:'
-          include_jobs: false
